added code segment to read inout and get sum

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -19,6 +19,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter any number: 10\n",
+      "Enter the 2nd number: 20\n",
+      "Sum of two numbers is  30\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = input(\"Enter any number: \")\n",
+    "num2 = input(\"Enter the 2nd number: \")\n",
+    "result = int(num1) + int(num2)\n",
+    "print(\"Sum of two numbers is \", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
