testing undo for committed changes: exit
q

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -41,6 +41,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing undo for committed files\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"testing undo for committed files\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
