undo multiple changes to committed file

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -58,6 +58,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Undo my changes committed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Undo my changes committed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
